# pycrdt-litestar-example

./: .dockerignore  .gitignore  CI.py  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  webpack.config.js
.github/workflows/: test.yaml
ci/: __main__.py  app.py
example_app/: __main__.py  asgi.py  cli.py  core.py  etc.py  factory.py  logging.py  routes.py  server.py  templates.py
example_app/static/src/js/: index.js
example_app/templates/: index.html
static/css/: codemirror.css
static/js/: index.js
tests/: conftest.py  test_collaboration.py  test_factory.py
